force-app/main/default/objects/Repayment_Record__c/Repayment_Record__c.object-meta.xml
<CustomObject>
    <label>Repayment Record</label>
    <nameField>
        <displayFormat>RN{YYYY}{MM}{DD}{000000}</displayFormat>
        <label>Repayment Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>