force-app/main/default/objects/Repayment_Record__c/fields/Principal_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Principal_Repayment__c</fullName>
    <label>Principal Repayment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>