force-app/main/default/objects/Repayment_Record__c/fields/Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Amount__c</fullName>
    <label>Repayment Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>