force-app/main/default/objects/Repayment_Record__c/fields/Repayment_Status__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Status__c</fullName>
    <label>Repayment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已结清</fullName>
            </value>
            <value>
                <fullName>逾期</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>